syntax = "proto3";

package bilibili.metadata.device;

/** 设备信息 */
message Device {
    /**
     * 产品编号
     * | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12 | 13 | 14 |
     * | :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: |
     * | 粉 | 白 | 蓝 | 直播姬 | HD | 海外 | OTT | 漫画 | TV野版 | 小视频 | 网易漫画 | 网易漫画lite | 网易漫画HD | 国际版 |
     */
    int32 app_id = 1;
    /** 版本号(version_code) */
    int32 build = 2;
    /** 设备id */
    string buvid = 3;
    /** 包类型 */
    string mobi_app = 4;
    /** 平台：ios/android */
    string platform = 5;
    /** 运行设备 */
    optional string device = 6;
    /** 渠道 */
    string channel = 7;
    /** 手机品牌 */
    string brand = 8;
    /** 手机型号 */
    string model = 9;
    /** 系统版本 */
    string osver = 10;
    /** 本地设备指纹 */
    string fp_local = 11;
    /** 远程设备指纹 */
    string fp_remote = 12;
    /** 版本号(version_name) */
    string version_name = 13;
    /** 设备指纹, 不区分本地或远程设备指纹，作为推送目标的索引. */
    string fp = 14;
	/** 首次启动时的毫秒时间戳 */
    int64 fts = 15;
}